tests/compile_fail/config_error.stderr
error: Invalid config name syntax.
 --> tests/compile_fail/config_error.rs:8:7
  |
8 |     #[wrong::syntax]
  |       ^^^^^^^^^^^^^

error: Unknown config.
 --> tests/compile_fail/config_error.rs:9:7
  |
9 |     #[wrong(syntax)]
  |       ^^^^^

error: Unknown config.
  --> tests/compile_fail/config_error.rs:11:7
   |
11 |     #[unrecognized = "value"]
   |       ^^^^^^^^^^^^
